# shareserverless

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt
go/: go.mod  module.go
proto/: execution.proto
python/: pyproject.toml  requirements-dev.txt  requirements.txt
python/app/: __init__.py  main.py
python/app/api/: v1.py
python/app/core/: __init__.py  config.py  crypto.py  database.py  logging.py  metrics.py
python/app/models/: __init__.py  database.py  schemas.py
python/app/services/: __init__.py  discovery.py  governance.py  scheduler.py  storage.py  verification.py
python/tests/: _helpers.py  conftest.py  test_models.py  test_schemas.py  test_services.py
