[project]
name = "shareserverless"
version = "0.1.0"
description = "Decentralized compute, storage, and AI-hosting network"
readme = "../../README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ShareServerless Contributors" }]
keywords = ["decentralized", "edge-computing", "serverless", "ai-hosting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "cryptography>=42.0.0",
    "pyjwt[crypto]>=2.8.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "alembic>=1.13.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "httpretty>=1.0.4",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-redis",
    "types-requests",
]
grpc = [
    "grpcio-tools>=1.60.0",
    "grpcio-reflection>=1.60.0",
]

[project.urls]
Repository = "https://github.com/minagayid/shareserverless"
Documentation = "https://github.com/minagayid/shareserverless"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
